<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_limit">Access restrictions</string>
    <string name="access_tips">"Can't access items. Try using Android Storage Access Framework instead."</string>
    <string name="accessibility_sliding_button_state_description_off">Turned off</string>
    <string name="accessibility_sliding_button_state_description_on">Turned on</string>
    <string name="accessibility_tab_state_description_unselect">Not selected</string>
    <string name="accessibility_tab_statedesc_unselect">Not selected</string>
    <string name="action_cache_to_local">Download to device</string>
    <string name="action_mode_deselect_all">Deselect all</string>
    <string name="action_mode_select_all">Select all</string>
    <string name="action_release_file_cache">Clear cache</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="ad_download">Download</string>
    <string name="add_one">(1)</string>
    <string name="add_private">Make files private</string>
    <string name="add_private_files">Add files</string>
    <string name="add_to_desktop">Add to Home screen</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="added_category">Added</string>
    <string name="afternoon">Afternoon</string>
    <string name="aggree_desc">Allow this app to connect to the internet and grant the mandatory permissions listed above.</string>
    <string name="agree">Agree</string>
    <string name="ai_search_building_database">Analyzing files to provide more accurate results…</string>
    <string name="ai_search_building_database_details">View details</string>
    <string name="ai_search_building_database_pause">Files will be analyzed on your device to provide more accurate results</string>
    <string name="ai_search_progress">Analyzing files… (%s)</string>
    <string name="ai_search_progress_tips">"Keep your device connected to the charger. It'll analyze files faster when the screen is off."</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aosp_appbar_scrolling_view_behavior">com.android.fileexplorer.view.aosp.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_all_purpose">Welcome to File Manager! You can use this app to manage the files stored on your device.</string>
    <string name="app_all_purpose_global">Welcome to File Manager! You can use this app to preview and manage files stored on your device.</string>
    <string name="app_all_purpose_pad">Welcome to File Manager! You can use this app to manage the files stored on your device.</string>
    <string name="app_name">Files</string>
    <string name="app_name_camera">Camera</string>
    <string name="app_name_downloadedrom">Packages</string>
    <string name="app_name_market">App Store</string>
    <string name="app_name_miui">System resources</string>
    <string name="app_name_miuimusic">Music</string>
    <string name="app_name_miuiringtone">Ringtone</string>
    <string name="app_name_miuiwallpaper">Wallpapers</string>
    <string name="app_name_recorder">Recorder</string>
    <string name="app_name_screenshot">Screenshots &amp; screen recordings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_message">App notifications</string>
    <string name="available_size">Available: %s</string>
    <string name="big5_summary">Traditional Chinese Windows default encoding</string>
    <string name="big5_title">BIG5</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="by_date">Time modified</string>
    <string name="by_name">Name</string>
    <string name="by_size">Size</string>
    <string name="by_type">Type</string>
    <string name="byteShort">B</string>
    <string name="calendar_date_picker_a11y_next_month">Change to next month</string>
    <string name="calendar_date_picker_a11y_prev_month">Change to previous month</string>
    <string name="calendar_date_picker_day_of_week_column_header">%1$s</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_mi_drive">Cancel Mi Drive services</string>
    <string name="category_midrive">Mi Drive</string>
    <string name="cloud_drive_settings">Mi Drive settings</string>
    <string name="cloud_recently_deleted">Recently deleted</string>
    <string name="confirm">OK</string>
    <string name="create_folder">Create</string>
    <string name="decompress_cancel">Cancel</string>
    <string name="decompress_confirm">Extract</string>
    <string name="decrypt">Remove</string>
    <string name="display_setting">Displayed items</string>
    <string name="encrypt_setting">Encryption</string>
    <string name="extend_service_setting">Additional services</string>
    <string name="file_cloud_setting">File settings</string>
    <string name="file_cloud_setting_item_view_message">View iWork, Xmind, and *.psd files online</string>
    <string name="file_cloud_setting_item_view_title">Online files</string>
    <string name="ftp_anonymous_login">Anonymous sign-in</string>
    <string name="ftp_port_number">Port number</string>
    <string name="ftp_transfer_secure">Security</string>
    <string name="ftp_username_and_passworld">Sign in</string>
    <string name="func_settings">Feature settings</string>
    <string name="gbk_summary">Simplified Chinese Windows default encoding</string>
    <string name="gbk_title">GBK</string>
    <string name="imm_str_storage">Storage</string>
    <string name="launcher_icon_add_description">Add a Home screen shortcut</string>
    <string name="list_mode">List view</string>
    <string name="make_private">Make private</string>
    <string name="manage_cloud_space">Manage cloud storage</string>
    <string name="menu_item_cleanup">Clean up</string>
    <string name="menu_item_ftp">FTP</string>
    <string name="menu_item_midrop">Transfer files</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_add_time">"Added to favorites "</string>
    <string name="menu_item_sort_date">Modification time</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="menu_item_usb">USB</string>
    <string name="menu_set_wallpaper">Set as wallpaper</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cloud_copy_to_local">Save to…</string>
    <string name="operation_compress">Compress</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_clipboard">Copy to clipboard</string>
    <string name="operation_create_folder">Create folder</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_download">Download</string>
    <string name="operation_editor">Edit</string>
    <string name="operation_encrypt_summary">Encrypt files in the private folder. Decrypting big files might take longer than expected.</string>
    <string name="operation_encrypt_title">Encrypt private files</string>
    <string name="operation_favorite">Add to favorites</string>
    <string name="operation_gallary">View in Gallery</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_open">Open</string>
    <string name="operation_open_mode">Open with</string>
    <string name="operation_other_apps">Open in another app</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pic_to_pdf">Create PDF</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_send">Send</string>
    <string name="operation_send_to_pc">Move to computer</string>
    <string name="operation_set_pic_wallpaper">Set as wallpaper</string>
    <string name="operation_show_privacy_policy">Show Privacy Policy</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from favorites</string>
    <string name="permission_description">Permissions details</string>
    <string name="positive_order">Forward</string>
    <string name="pre_privacy_recall">Withdrawal of consent</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="recent_hide_camera_and_screenshots">"Don't show Gallery items and screenshots among recent files"</string>
    <string name="recent_hide_cloud_drive_files">"Don't show Mi Drive files in Recents"</string>
    <string name="repair_file">Restore encrypted files</string>
    <string name="replace">Replace</string>
    <string name="reset_password">Change password</string>
    <string name="reverse_order">Reverse</string>
    <string name="search_title_hint">Search</string>
    <string name="server_control_advanced_settings">Additional settings</string>
    <string name="server_control_charset">Transfer encoding</string>
    <string name="settings">@string/server_control_settings</string>
    <string name="skip">Skip</string>
    <string name="sort_size_asc">Smaller to bigger</string>
    <string name="sort_size_desc">Bigger to smaller</string>
    <string name="stay_awake_summary">"Don't let display sleep while using FTP"</string>
    <string name="stay_awake_title">Keep display awake</string>
    <string name="use_mobile_data_update_summary">Use mobile data to automatically sync changes to files downloaded from Mi Drive</string>
    <string name="use_mobile_data_update_title">Use mobile data to sync</string>
    <string name="utf8_summary">System FTP default encoding</string>
    <string name="utf8_title">UTF-8</string>
</resources>