<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/miuix_action_icon_send_dark" android:id="@id/action_send" android:title="@string/operation_send" android:showAsAction="always" />
    <item android:icon="@drawable/miuix_action_icon_favorite_dark" android:id="@id/action_favorite" android:title="@string/operation_favorite" android:showAsAction="always" />
    <item android:icon="@drawable/miuix_action_icon_unfavorite_dark" android:id="@id/action_unfavorite" android:title="@string/operation_unfavorite" android:showAsAction="always" />
    <item android:icon="@drawable/miuix_action_icon_delete_dark" android:id="@id/action_delete" android:title="@string/operation_delete" android:showAsAction="always" />
    <item android:icon="@drawable/miuix_action_icon_remove_blocklist_dark" android:id="@id/action_decrypt" android:title="@string/decrypt" android:showAsAction="always" />
    <item android:id="@id/action_private" android:title="@string/make_private" />
    <item android:id="@id/action_other_app" android:title="@string/operation_other_apps" />
    <item android:id="@id/action_repair" android:title="@string/repair_file" android:showAsAction="never" />
</menu>
