<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parent" android:background="@drawable/widget_popup_window_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/fab_menu_text_color_d" android:gravity="center" android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/menu_item_sort" android:fontFamily="sans-serif" />
    <TextView android:id="@id/tv_sort_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/menu_item_sort_name" style="@style/WidgetPopUpTextStyle" />
    <TextView android:id="@id/tv_sort_size_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sort_size_desc" style="@style/WidgetPopUpTextStyle" />
    <TextView android:id="@id/tv_sort_size_asc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sort_size_asc" style="@style/WidgetPopUpTextStyle" />
    <TextView android:id="@id/tv_sort_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_item_sort_type" style="@style/WidgetPopUpTextStyle" />
    <TextView android:id="@id/tv_sort_modify_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="28.0dip" android:text="@string/menu_item_sort_date" style="@style/WidgetPopUpTextStyle" />
</LinearLayout>
